<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/reviewCardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginLeft="25dp"
    android:layout_marginRight="25dp"
    android:layout_marginTop="20dp"
    app:cardBackgroundColor="@android:color/holo_orange_dark"
    app:cardCornerRadius="6dp"
    app:cardElevation="10dp"
    android:clickable="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/bathroomId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:text="@string/bathroomId"
                android:textColor="#F5F2F2" />

            <TextView
                android:id="@+id/dot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dot"
                android:textColor="#F7F7F7"
                android:textSize="18sp" />

            <LinearLayout
                android:id="@+id/reviewLinearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/bathroomLocationName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="@string/locationName"
                    android:textColor="#F8F5F5"
                    android:textColorHighlight="#00FFFFFF"
                    android:textSize="24sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/bathroomFloor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:text="@string/bathroomFloor"
                        android:textColor="@color/colorAccent"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/bathroomFloorTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/bathroomFloorSub"
                        android:textColor="@color/colorAccent"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/bathroomFloorFloor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1"
                        android:text="@string/bathroomFloorFloor"
                        android:textColor="@color/colorAccent" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/bathroomGender"
                        android:layout_width="45dp"
                        android:layout_height="75dp"
                        android:layout_weight="1"
                        android:contentDescription="gender"
                        app:srcCompat="@drawable/male_off" />

                    <ImageView
                        android:id="@+id/bathroomFamily"
                        android:layout_width="45dp"
                        android:layout_height="75dp"
                        android:layout_weight="1"
                        android:contentDescription="family"
                        app:srcCompat="@drawable/family_off" />

                    <ImageView
                        android:id="@+id/bathroomHandicap"
                        android:layout_width="45dp"
                        android:layout_height="75dp"
                        android:layout_weight="1"
                        android:contentDescription="handicap"
                        app:srcCompat="@drawable/handicap_off" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>

<!--<android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"-->
<!--    xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:id="@+id/card_view_outer"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="200dp"-->
<!--    android:layout_gravity="center"-->
<!--    android:layout_margin="25dp"-->
<!--    card_view:cardBackgroundColor="@android:color/holo_orange_dark"-->
<!--    card_view:cardCornerRadius="100dp"-->
<!--    card_view:cardElevation="10dp">-->
<!--    -->
<!--    <androidx.constraintlayout.widget.ConstraintLayout-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        tools:layout_conversion_absoluteHeight="0dp"-->
<!--        tools:layout_conversion_absoluteWidth="0dp"-->
<!--        tools:layout_editor_absoluteX="0dp"-->
<!--        tools:layout_editor_absoluteY="0dp">-->

<!--    </androidx.constraintlayout.widget.ConstraintLayout>-->
<!--    -->
<!--</android.support.v7.widget.CardView>-->