<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.pottytime.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_notifications"
            app:destination="@id/navigation_notifications"
            app:popUpTo="@+id/navigation_notifications"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard"
            app:popUpTo="@+id/navigation_dashboard"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_bathrooms"
            app:destination="@id/navigation_bathrooms"
            app:popUpTo="@+id/navigation_bathrooms"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.pottytime.ui.dashboard.DashboardFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/action_navigation_dashboard_to_editFragment2"
            app:destination="@id/editFragment2"
            app:popUpTo="@+id/navigation_dashboard"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.pottytime.ui.notifications.SearchUserFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search_user" />
    <fragment
        android:id="@+id/navigation_bathrooms"
        android:name="com.example.pottytime.ui.bathroom.BathroomsFragment"
        android:label="fragment_bathrooms"
        tools:layout="@layout/fragment_bathrooms" >
        <action
            android:id="@+id/action_navigation_bathrooms_to_navigation_review"
            app:destination="@id/navigation_review"
            app:popUpTo="@+id/navigation_bathrooms"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/navigation_review"
        android:name="com.example.pottytime.ui.bathroom.reviews.ReviewFragment"
        android:label="fragment_review"
        tools:layout="@layout/fragment_review" />
    <fragment
        android:id="@+id/editFragment2"
        android:name="com.example.pottytime.ui.dashboard.EditFragment"
        android:label="EditFragment" />

</navigation>