<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="381dp"
        android:layout_height="157dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary">

            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/circularImageView"
                android:layout_width="138dp"
                android:layout_height="153dp"
                android:src="@drawable/doggo"
                app:civ_border_color="#FFFFFF"
                app:civ_border_width="10dp"
                app:civ_shadow="true"
                app:civ_shadow_color="#8BC34A"
                app:civ_shadow_radius="5"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <EditText
        android:id="@+id/firstName"
        android:layout_width="385dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:background="@drawable/text_border"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        android:text="@string/firstName"
        app:layout_constraintBottom_toTopOf="@+id/lastName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <EditText
        android:id="@+id/lastName"
        android:layout_width="385dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:background="@drawable/text_border"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        android:text="@string/lastName"
        app:layout_constraintBottom_toTopOf="@+id/gender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstName" />

    <EditText
        android:id="@+id/gender"
        android:layout_width="385dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="24dp"
        android:autofillHints=""
        android:background="@drawable/text_border"
        android:ems="10"
        android:gravity="center"
        android:inputType="text"
        android:text="@string/gender"
        app:layout_constraintBottom_toTopOf="@+id/emailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastName" />

    <EditText
        android:id="@+id/emailAddress"
        android:layout_width="385dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:autofillHints=""
        android:background="@drawable/text_border"
        android:ems="10"
        android:gravity="center"
        android:inputType="textEmailAddress"
        android:text="@string/emailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gender" />


</androidx.constraintlayout.widget.ConstraintLayout>